crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Nested_formal_typeva…_-_Generic_class_within…_(3259718bf20b45a2).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 624
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Nested formal typevars must be distinct - Generic class within generic function
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Iterable
2 | 
3 | def f[T](x: T, y: T) -> None:
4 |     class Ok[S]: ...
5 |     # error: [shadowed-type-variable]
6 |     class Bad1[T]: ...
7 |     # error: [shadowed-type-variable]
8 |     class Bad2(Iterable[T]): ...
```

# Diagnostics

```
error[shadowed-type-variable]: Generic class `Bad1` uses type variable `T` already bound by an enclosing scope
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Iterable
2 |
3 | def f[T](x: T, y: T) -> None:
  |     ------------------------ Type variable `T` is bound in this enclosing scope
4 |     class Ok[S]: ...
5 |     # error: [shadowed-type-variable]
6 |     class Bad1[T]: ...
  |           ^^^^ `T` used in class definition here
7 |     # error: [shadowed-type-variable]
8 |     class Bad2(Iterable[T]): ...
  |
info: rule `shadowed-type-variable` is enabled by default

```

```
error[shadowed-type-variable]: Generic class `Bad2` uses type variable `T` already bound by an enclosing scope
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Iterable
2 |
3 | def f[T](x: T, y: T) -> None:
  |     ------------------------ Type variable `T` is bound in this enclosing scope
4 |     class Ok[S]: ...
5 |     # error: [shadowed-type-variable]
6 |     class Bad1[T]: ...
7 |     # error: [shadowed-type-variable]
8 |     class Bad2(Iterable[T]): ...
  |           ^^^^^^^^^^^^^^^^^ `T` used in class definition here
  |
info: rule `shadowed-type-variable` is enabled by default

```
